2006-11-12  Stefan Kost  <ensonic@users.sf.net>

	* src/bml.c:
	  TODO comments

2006-11-01  Stefan Kost  <ensonic@users.sf.net>

	* .cvsignore:
	  ignore more

	* dllwrapper1/wine/module.c: (MODULE_LoadLibraryExA),
	(LoadLibraryExA):
	* dllwrapper1/wine/win32.c: (test_heap), (my_mreq), (my_release),
	(mreq_private), (ext_unknown), (expCreateThread), (destroy_event),
	(expCreateEventA), (expHeapCreate), (expHeapAlloc), (expHeapFree),
	(expVirtualAlloc), (expInitializeCriticalSection),
	(expEnterCriticalSection), (expLeaveCriticalSection),
	(expDeleteCriticalSection), (expLocalAlloc), (expGlobalAlloc),
	(expGlobalSize), (expCreateSemaphoreA), (expGetModuleFileNameA),
	(expCreateWindowExA), (expGetPrivateProfileIntA),
	(expWritePrivateProfileStringA), (expGetEnvironmentVariableA),
	(UnregisterComClass), (expIsRectEmpty), (expFindNextFileA),
	(expFindFirstFileA), (expCreateFileA), (expmalloc), (expcalloc),
	(expnew), (exp_initterm), (expfopen), (explog10), (expcos),
	(exppow), (expldexp), (expfrexp), (expExitProcess),
	(expMessageBoxA), (expTerminateProcess), (expVariantInit),
	(LookupExternalNative), (LookupExternal), (LookupExternalByName),
	(my_garbagecollection):
	* src/bml.c: (bml_setup), (bml_finalize):
	  more printf->TRACE/dbgprintf to be silent when not enabling debug

=== release 0.1.0 ===

2006-10-29  Stefan Kost  <ensonic@users.sf.net>

	* Makefile.in:
	  tidy CVS

2006-10-11  Stefan Kost  <ensonic@users.sf.net>

	* README:
	  /home/ensonic -> $HOME

2006-09-11  Stefan Kost  <ensonic@users.sf.net>

	* configure.ac:
	  coverage fixes for gcc-4

2006-08-27  Stefan Kost  <ensonic@users.sf.net>

	* NEWS:
	* configure.ac:
	* dllwrapper2/Makefile.in:
	* src/Makefile.am:
           prepare release 0.1.0

2006-08-24  Stefan Kost  <ensonic@users.sf.net>

	* COPYING:
	* buzz/BuzzMachineLoader.h:
	* dllwrapper1/wine/ldt_keeper.h:
	* src/bml.c:
	* src/bml.h:
	* src/bmltest_info.c:
	* src/bmltest_process.c:
         Add licence header + more comments
